Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ const cardsOriginal = [
   { q:"30. Modelowanie bryl i powierzchni", a:"Bryly i powierzchnie modeluje sie za pomoca siatek wielokatow. W grafice stosuje sie rowniez krzywe Beziera i NURBS. Metody te pozwalaja na dokladne odwzorowanie ksztaltow obiektow." },
   { q:"31. Swiatlo i barwa w grafice", a:"Barwe opisuje sie przy uzyciu modeli RGB oraz HSV. Swiatlo symuluje sie poprzez okreslenie natezenia i kierunku. Ma to bezposredni wplyw na kolor i wyglad cieni obiektow." },
   { q:"32. Przeksztalcenia 2D i 3D", a:"Przeksztalcenia w grafice opisuje sie za pomoca macierzy. Obejmuja one translacje, skalowanie oraz obroty. Sa powszechnie stosowane w grafice komputerowej 2D i 3D." },
-  { q:"33. Warstwy modelu OSI", a:"Model OSI sklada sie z siedmiu warstw. Kazda warstwa realizuje okreslone funkcje komunikacyjne. Model ten ulatwia projektowanie i analize sieci." },
+  { q:"33. Warstwy modelu OSI", a:"Model OSI składa się z warstw: fizycznej, łącza danych, sieciowej, transportowej, sesji, prezentacji oraz aplikacji.." },
   { q:"34. Model TCP/IP", a:"Model TCP/IP sluzy do komunikacji w sieciach komputerowych. Sklada sie z czterech warstw funkcjonalnych. Stanowi podstawe dzialania Internetu." },
   { q:"35. Rola routera", a:"Router przekazuje pakiety danych pomiedzy roznymi sieciami. Dziala glownie w warstwie sieciowej modelu OSI. Obsluguje protokoly routingu." },
   { q:"36. Protokoly routingu", a:"Protokoly routingu wyznaczaja optymalna droge przesylu danych. Dzialaja na podstawie metryk takich jak koszt lub odleglosc. Przykladem protokolu routingu jest OSPF." },
@@ -214,4 +214,5 @@ render();
 </script>
 </body>
 </html>
+
 
